Update BT_WEB with new changes

--- a/BT_WEB/Baitap_js_boostrap.html
+++ b/BT_WEB/Baitap_js_boostrap.html
@@ -314,7 +314,7 @@
             <!-- Modal  -->
           </div>
           <div class="col-12 d-flex">
-            <h1 class="text-center text-danger">1. Modal Submit form</h1>
+            <h1 class="text-center text-danger">1. Modal Submit form VÀ CHUYỂN MODAL thẻ a "tại đây"</h1>
             <button
               type="button"
               class="btn btn-success m-auto"
